# lang/en/validation.php
@@ -193,6 +193,7 @@ return [
         'clicks_left' => 'left clicks',
         'clicks_middle' => 'middle clicks',
         'clicks_right' => 'right clicks',
+        'cf-turnstile-response' => 'security check',
         'contactme' => 'contact permission',
         'cpu' => 'CPU usage',
         'data' => 'data',
@@ -257,6 +258,7 @@ return [
         'power' => 'power',
         'pressure' => 'pressure',
         'privacity' => 'privacy policy acceptance',
+        'recaptcha_token' => 'security check',
         'pulsation_average' => 'average keystrokes',
         'pulsations' => 'keystrokes',
         'pulsations_special_keys' => 'special key strokes',
@@ -299,6 +301,7 @@ return [
         'total_power_generation_wh' => 'total generated energy',
         'track' => 'track',
         'uptime' => 'uptime',
+        'turnstile_token' => 'security check',
         'user_id' => 'user',
         'uv' => 'UV index',
         'vaporizer_enabled' => 'vaporizer enabled',
