# lang/es/validation.php
@@ -175,6 +175,7 @@ return [
         'clicks_left' => 'clics izquierdos',
         'clicks_middle' => 'clics centrales',
         'clicks_right' => 'clics derechos',
+        'cf-turnstile-response' => 'verificación de seguridad',
         'contactme' => 'permiso para contactar',
         'cpu' => 'uso de CPU',
         'data' => 'datos',
@@ -239,6 +240,7 @@ return [
         'power' => 'potencia',
         'pressure' => 'presión',
         'privacity' => 'aceptación de la política de privacidad',
+        'recaptcha_token' => 'verificación de seguridad',
         'pulsation_average' => 'media de pulsaciones',
         'pulsations' => 'pulsaciones',
         'pulsations_special_keys' => 'pulsaciones de teclas especiales',
@@ -281,6 +283,7 @@ return [
         'total_power_generation_wh' => 'energía generada acumulada',
         'track' => 'rumbo',
         'uptime' => 'tiempo encendido',
+        'turnstile_token' => 'verificación de seguridad',
         'user_id' => 'usuario',
         'uv' => 'índice UV',
         'vaporizer_enabled' => 'vaporizador activo',
